--- a/www/custom.css
+++ b/www/custom.css
@@ -1,6 +1,6 @@
-
 .main-header .logo {
-	font-family: 'calibri light';
-	font-weight: bold;
-	font-size: 24px; 
+  font-family: "Georgia", Times, "Times New Roman", serif;
+  font-weight: bold;
+  font-size: 24px;
+  color: #515A5A;
 }
